--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ a {
 }
 
 body{
-    margin:0;
+    margin:0px;
     background-color: rgb(15,15,15);
 }
 
@@ -16,6 +16,22 @@ h1{
   border-bottom:4px solid gray;
   margin: 0px;
   padding: 10px;
+}
+
+#empty_box {
+  width:100px;
+  height:150px;
+}
+
+#end {
+  color: white;
+  font-size: 14px;
+  text-align: center;
+
+  border-top: 4px solid gray;
+  padding : 10px;
+  padding-bottom: 30px;
+  margin: 0px;
 }
 
 #grid ol{
@@ -49,9 +65,13 @@ h1{
 @media(min-width:920px) {
   body{
     width: 920px;
-    margin-left: calc((100vw - 920px)/2);
-    margin-right: calc((100vw - 920px)/2);
+    border-left: calc((100vw - 961px)/2) black solid;
+    border-right: calc((100vw - 961px)/2) black solid;
+
+    padding-left: 15px;
+    padding-right: 15px;
   }
+
   h1{
     width:900px;
   }
@@ -67,11 +87,14 @@ h1{
   #grid ol{
     border-right: none;
     border-bottom: 2px solid gray;
-    width: 100px;
-    margin-left:10px;
+    width: calc(100vw - 150px);
+
+    margin-left:20px;
+    margin-right:30px;
+
     padding-top: 10px;
-    padding-left: 35px;
-    padding-right: 35px;
+    padding-left: 50px;
+    padding-right: 50px;
     padding-bottom: 10px;
   }
 }
